# zisk.nix

./: Dockerfile  README.md  flake.nix  garnix.yaml  overlay.nix  rust-toolchain.toml
.github/workflows/: ci.yml
benchmarks/blake3/: Cargo.toml
benchmarks/blake3/src/: main.rs
docker/: Dockerfile  build-image.nix  run-zisk.nix  zisk-shell.nix
pkgs/: cargo-zisk.nix  common.nix  libstarks.nix  pil2-stark.nix  proving-key.nix  rustup-shim.nix  zisk-home.nix  zisk-toolchain.nix  ziskemu.nix
templates/: default.nix
templates/sha_hasher/: .gitignore  Cargo.toml  README.md  flake.nix
templates/sha_hasher/aggregation_guest/: Cargo.toml
templates/sha_hasher/aggregation_guest/src/: main.rs
templates/sha_hasher/common/: Cargo.toml
templates/sha_hasher/guest/: Cargo.toml
templates/sha_hasher/guest/src/: main.rs
templates/sha_hasher/host/: Cargo.toml  build.rs
templates/sha_hasher/host/src/: main.rs
templates/sha_hasher_aggregation/: .gitignore  Cargo.toml  README.md  flake.nix
templates/sha_hasher_aggregation/guest/: Cargo.toml
templates/sha_hasher_aggregation/guest/src/: main.rs
templates/sha_hasher_aggregation/guest_agg/: Cargo.toml
templates/sha_hasher_aggregation/guest_agg/src/: main.rs
templates/sha_hasher_aggregation/host/: Cargo.toml  build.rs
templates/sha_hasher_aggregation/host/src/: lib.rs  main.rs
