[workspace]
members = ["host", "guest", "aggregation_guest"]
resolver = "2"

[workspace.dependencies]
byteorder = "1.5.0"
sha2 = "0.10.8"

zisk-sdk = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.17.0" }
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.17.0" }
