[package]
name = "host"
version = "0.1.0"
edition = "2024"
default-run = "host"

[dependencies]
zisk-sdk = { workspace = true }
anyhow = "1.0"

[build-dependencies]
zisk-sdk = { workspace = true }
clap = { version = "4", features = ["derive"] }

[features]
default = []
precompile = []
packed = []
gpu = ["zisk-sdk/gpu"]

[[bin]]
name = "prove"
path = "bin/prove.rs"

[[bin]]
name = "execute"
path = "bin/execute.rs"

[[bin]]
name = "plonk"
path = "bin/plonk.rs"

[[bin]]
name = "compressed"
path = "bin/compressed.rs"

[[bin]]
name = "ziskemu"
path = "bin/ziskemu.rs"

[[bin]]
name = "verify-constraints"
path = "bin/verify-constraints.rs"
